node-main/deps/v8/test/message/fail/nf-yield-strict-in-generator.out
*%(basename)s:7: SyntaxError: Unexpected strict mode reserved word
  function yield() {}
           ^^^^^
SyntaxError: Unexpected strict mode reserved word
